- Schaltflächenzeile (z. B. „Aktive Geräte“) konsequent auf die Accent-Palette ausgerichtet, während Suche, Listen und Karten die Main/Alternative-Farben nutzen.
- Alle verbleibenden Hintergrund-, Text- und Akzentfarben auf die gelieferten Modul-Layer (wie im ColorExample-Modul) umgestellt, ohne dunkle/blau hinterlegte Fallbacks.

## [1.1.18] – 2025-10-13
### Changed
- Modalbreite und Layout-Abstände für Einstellungen erweitert, sodass Filter, Zusatzspalten und Hauptbereich mehr Platz bekommen und Dropdowns nicht mehr gequetscht wirken.

## [1.1.17] – 2025-10-15
### Changed
- Schnellaktionen (Titel, Datei-Auswahl, Aktivieren/Deaktivieren) in die linke Spalte des Einstellungsdialogs verschoben, wo sie oberhalb des Überschriftenfilters gebündelt sind.

## [1.1.16] – 2025-10-14
### Changed
- Überschriftenfilter im Einstellungsdialog links neben den Extraspalten angeordnet, damit beide Bereiche nebeneinander erscheinen.

## [1.1.15] – 2025-10-13
### Changed
- Kontextmenü-Optionen in das Einstellungsmodal verlagert; das Modal öffnet jetzt per Rechtsklick und bündelt Dateiauswahl, Schnellaktionen und Partfilter an einem Ort.

## [1.1.14] – 2025-10-11
### Changed
- Datei-Handles werden jetzt im gemeinsamen IndexedDB-Store (`modulesApp` → `fs-handles`) der Module abgelegt; bestehende Aspen-
  Einträge aus dem Legacy-Speicher werden automatisch übernommen und bereinigt.

## [1.1.13] – 2025-10-10
### Changed
- Scrollleisten des Aspen-Boards optisch überarbeitet und an das globale Dashboard-Design angepasst.
- Hervorhebung aktiver Karten mit deutlicherem Rahmen und Schatten versehen, damit Statusfarben klar hervorstechen.
- Moduloberfläche und Kartenfarben an den New-Standard-Findings-Look angepasst, inklusive aktualisierter Standardfarbpalette.

## [1.1.12] – 2025-10-06
### Changed
- Die aktive Spalte lässt sich jetzt direkt im Optionsdialog ein- oder ausblenden; Layout und Flex-Berechnung passen sich an die
  sichtbaren Listen an und verteilen den Platz ausgewogener.