@@ -9,6 +9,7 @@ Format basiert auf [Keep a Changelog](https://keepachangelog.com/de/1.0.0/) und 
 - Feste Farbschemata und Picker aus dem Optionsdialog entfernt; alle Hintergründe, Buttons und Karten lesen ihre Farben direkt aus den Modulpaletten.
 - Schaltflächenzeile (z. B. „Aktive Geräte“) konsequent auf die Accent-Palette ausgerichtet, während Suche, Listen und Karten die Main/Alternative-Farben nutzen.
 - Alle verbleibenden Hintergrund-, Text- und Akzentfarben auf die gelieferten Modul-Layer (wie im ColorExample-Modul) umgestellt, ohne dunkle/blau hinterlegte Fallbacks.
+- Farbwerte werden unverändert aus den drei Modulpaletten übernommen, ohne zusätzliche Hex-Sanitization oder Ersatz durch Standardweiß/-blau, damit exakt die in HTML definierten Main/Alternative/Accent-Werte greifen.
 
 ## [1.1.18] – 2025-10-13
 ### Changed
